jni-macros/tests/ui/native_method_struct/fail/raw_wrong_return_type.stderr
error[E0308]: mismatched types
  --> tests/ui/native_method_struct/fail/raw_wrong_return_type.rs:20:14
   |
17 |       let _method = native_method! {
   |  ___________________-
18 | |         name = "myMethod",
19 | |         sig = () -> jint,
20 | |         fn = my_method_impl,
   | |              ^^^^^^^^^^^^^^ expected fn pointer, found fn item
21 | |         raw = true,
22 | |     };
   | |_____- expected due to this
   |
   = note: expected fn pointer `extern "system" for<'local> fn(EnvUnowned<'local>, JObject<'local>) -> i32`
                 found fn item `extern "system" for<'local> fn(EnvUnowned<'local>, JObject<'local>) -> i64 {my_method_impl}`
